--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
             android:drawableLeft="@drawable/ic_lock_login_24"
             android:textColor="@color/dangnhap"
             android:inputType="textPassword"
-            android:hint="Password"
+            android:hint="Mật khẩu"
             android:textColorHint="@color/dangnhap"
             android:layout_gravity="center"
             android:background="@drawable/custom_edittext_background_login"
@@ -59,12 +59,12 @@
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:background="@drawable/custom_background_button_login"
-            android:layout_width="180dp"
-            android:layout_height="40dp">
+            android:layout_width="200dp"
+            android:layout_height="42dp">
             <TextView
                 android:text="Đăng nhập"
                 android:textStyle="bold"
-                android:textSize="12dp"
+                android:textSize="17dp"
                 android:textColor="@color/titleTabColor"
                 android:layout_gravity="center"
                 android:gravity="center"
