--- a/app/src/main/res/layout/layout_fragment_chi_tiet_don_tra_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_chi_tiet_don_tra_hang.xml
@@ -90,7 +90,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -116,7 +116,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -131,7 +131,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="3.Tên nhà cung ứng:"
+                        android:text="3. Tên nhà cung ứng:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -143,7 +143,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -169,7 +169,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -196,7 +196,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -222,7 +222,7 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:gravity="right"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -249,7 +249,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -275,7 +275,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
@@ -302,7 +302,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/colorAAA"
+                        android:textColor="@color/dangnhap"
                         android:textSize="14dp" />
                 </LinearLayout>
                 <!--end-->
