--- a/app/src/main/res/layout/layout_fragment_employee_list.xml
+++ b/app/src/main/res/layout/layout_fragment_employee_list.xml
@@ -80,12 +80,18 @@
                 <EditText
                     android:id="@+id/edit_filter"
                     android:imeOptions="actionSearch"
-                    android:inputType="none"
+                    android:inputType="text"
                     android:background="@color/white"
                     android:layout_marginHorizontal="5dp"
                     android:layout_weight="1"
                     android:hint="Tên nhân viên, số điện..."
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:id="@+id/image_close"
+                    android:src="@drawable/ic_delete_noti"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
