--- a/app/src/main/res/layout/layout_fragment_sanpham_banchay.xml
+++ b/app/src/main/res/layout/layout_fragment_sanpham_banchay.xml
@@ -92,13 +92,20 @@
                         <EditText
                             android:id="@+id/edit_filter"
                             android:imeOptions="actionSearch"
-                            android:inputType="none"
+                            android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="5dp"
                             android:layout_weight="1"
                             android:background="@color/white"
                             android:hint="Search top..." />
+
+                        <ImageView
+                            android:id="@+id/image_close"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_delete_noti" />
                     </LinearLayout>
 
                     <LinearLayout
