--- a/app/src/main/res/layout/layout_fragment_thong_ke.xml
+++ b/app/src/main/res/layout/layout_fragment_thong_ke.xml
@@ -39,7 +39,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Tóm tắt doanh sô"
+                    android:text="Tóm tắt doanh số"
                     android:textColor="@color/white"
                     android:textSize="20dp"
                     android:textStyle="bold" />
