--- a/app/src/main/res/layout/layout_fragment_doanh_thu_theo_san_pham.xml
+++ b/app/src/main/res/layout/layout_fragment_doanh_thu_theo_san_pham.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_back_24" />
+                    android:src="@drawable/ic_icon_back" />
 
                 <TextView
                     android:layout_width="match_parent"
