--- a/app/src/main/res/layout/layout_fragment_doi_tra_hang_hoa.xml
+++ b/app/src/main/res/layout/layout_fragment_doi_tra_hang_hoa.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dp5"
-                    android:src="@drawable/ic_back_24" />
+                    android:src="@drawable/ic_icon_back" />
 
                 <TextView
                     android:layout_width="match_parent"
