--- a/app/src/main/res/layout/layout_fragment_level_customer_detail.xml
+++ b/app/src/main/res/layout/layout_fragment_level_customer_detail.xml
@@ -39,6 +39,7 @@
 
                         <ImageView
                             android:id="@+id/imageNavLeft"
+                            android:layout_margin="@dimen/dp5"
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
