--- a/app/src/main/res/layout/layout_fragment_sales_summary_manager.xml
+++ b/app/src/main/res/layout/layout_fragment_sales_summary_manager.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/imageNavLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_back_24" />
+                    android:src="@drawable/ic_icon_back" />
 
                 <TextView
                     android:layout_width="match_parent"
