--- a/app/src/main/res/layout/layout_fragment_tong_doanh_thu_manager.xml
+++ b/app/src/main/res/layout/layout_fragment_tong_doanh_thu_manager.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dp5"
-                    android:src="@drawable/ic_back_24" />
+                    android:src="@drawable/ic_icon_back" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Tóm tắt doanh sô"
+                    android:text="Tóm tắt doanh số"
                     android:textColor="@color/white"
                     android:textSize="20dp"
                     android:textStyle="bold" />
