--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -110,6 +110,6 @@
     <color name="bg_filter">#F2F2F2</color>
     <color name="tien">#FFC32D</color>
     <color name="xacnhan">#709FB0</color>
-    <color name="item_one_chart">#DBFE74</color>
+    <color name="item_one_chart">#6BB52F</color>
     <color name="item_two_chart">#FF85B5</color>
 </resources>
