--- a/app/src/main/res/layout/layout_fragment_chi_tiet_don_tra_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_chi_tiet_don_tra_hang.xml
@@ -104,7 +104,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="2. Tên sản phẩm:"
+                        android:text="2. Mã lô hàng:"
+                        android:textColor="@color/colorAAA"
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/id_lo_hang"
+                        android:gravity="right"
+                        android:layout_gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/dangnhap"
+                        android:textSize="14dp" />
+                </LinearLayout>
+                <!--end-->
+
+                <LinearLayout
+                    android:layout_marginTop="@dimen/dp10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="3. Tên sản phẩm:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -131,7 +158,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="3. Tên nhà cung ứng:"
+                        android:text="4. Tên nhà cung ứng:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -157,7 +184,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="4. Mã nhà cung ứng:"
+                        android:text="5. Mã nhà cung ứng:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -184,7 +211,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="5. Số lượng trả hàng:"
+                        android:text="6. Số lượng trả hàng:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -210,7 +237,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="6. Hạn sử dụng:"
+                        android:text="7. Hạn sử dụng:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -237,7 +264,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="7. Ngày nhập hàng:"
+                        android:text="8. Ngày nhập hàng:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -263,7 +290,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="8. Ngày trả hàng:"
+                        android:text="9. Ngày trả hàng:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -290,7 +317,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="9. Người tạo đơn:"
+                        android:text="10. Người tạo đơn:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -316,7 +343,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="10. Lý do:"
+                        android:text="11. Lý do:"
                         android:textColor="@color/colorAAA"
                         android:textSize="14dp"
                         android:textStyle="bold" />
