--- a/app/src/main/res/layout/layout_fragment_product_detail.xml
+++ b/app/src/main/res/layout/layout_fragment_product_detail.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/hinhnen"
     android:orientation="vertical">
 
@@ -90,13 +92,28 @@
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
             </LinearLayout>
+
+<!--            <me.dm7.barcodescanner.zxing.ZXingScannerView-->
+<!--                android:id="@+id/scannerView"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="200dp"-->
+<!--                app:borderColor="#FFF"-->
+<!--                app:borderLength="24dp"-->
+<!--                app:borderWidth="4dp"-->
+<!--                app:laserColor="#00ff77"-->
+<!--                app:maskColor="@android:color/transparent"-->
+<!--                app:roundedCorner="false"-->
+<!--                app:squaredFinder="true"-->
+<!--                tools:ignore="MissingConstraints" />-->
+
             <ImageView
                 android:id="@+id/image_product"
                 android:layout_gravity="center"
                 android:layout_marginVertical="@dimen/dp20"
                 android:layout_width="210dp"
                 android:layout_height="130dp"/>
-
 
             <LinearLayout
                 android:layout_gravity="center"
@@ -286,6 +303,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <ImageView
+                    android:id="@+id/image_barcode"
                     android:layout_marginHorizontal="@dimen/dp10"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_icon_qrcode"
@@ -330,6 +348,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <ImageView
+                    android:id="@+id/image_qrcode"
                     android:layout_marginHorizontal="@dimen/dp10"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_icon_qrcode"
