--- a/app/src/main/res/layout/activity_qr__barcode.xml
+++ b/app/src/main/res/layout/activity_qr__barcode.xml
@@ -22,12 +22,14 @@
 
         <Button
             android:id="@+id/buttonGenerate"
+            android:text="Generate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
         <Button
             android:id="@+id/buttonScan"
+            android:text="Scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
