--- a/app/src/main/res/layout/activity_qr__barcode.xml
+++ b/app/src/main/res/layout/activity_qr__barcode.xml
@@ -8,6 +8,22 @@
     android:orientation="vertical"
     tools:ignore="HardcodedText">
 
+    <me.dm7.barcodescanner.zxing.ZXingScannerView
+        android:id="@+id/scannerView"
+        android:visibility="visible"
+        android:layout_gravity="center"
+        app:layout_constraintLeft_toRightOf="@id/search_close_btn"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:borderColor="#FFF"
+        app:borderLength="24dp"
+        app:borderWidth="4dp"
+        app:laserColor="#00ff77"
+        app:maskColor="@android:color/transparent"
+        app:roundedCorner="false"
+        app:squaredFinder="true"
+        tools:ignore="MissingConstraints" />
+
     <EditText
         android:id="@+id/editTextProductId"
         android:layout_width="match_parent"
@@ -46,5 +62,7 @@
         android:layout_width="match_parent"
         android:visibility="gone"
         android:layout_height="335dp" />
+
+
 
 </LinearLayout>
