--- a/app/src/main/res/layout/layout_fragment_create_product.xml
+++ b/app/src/main/res/layout/layout_fragment_create_product.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/hinhnen"
@@ -53,6 +53,7 @@
     </android.support.v7.widget.Toolbar>
 
     <android.support.v4.widget.NestedScrollView
+        android:layout_below="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
@@ -288,6 +289,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <ImageView
+                    android:id="@+id/image_barcode"
                     android:layout_marginHorizontal="@dimen/dp10"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_icon_qrcode"
@@ -305,7 +307,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:src="@drawable/bar_code"
+                android:id="@+id/imv_barcode"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -332,6 +334,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <ImageView
+                    android:id="@+id/image_qrcode"
                     android:layout_marginHorizontal="@dimen/dp10"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_icon_qrcode"
@@ -349,7 +352,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:src="@drawable/ic_barcode"
+                android:id="@+id/imv_qrcode"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -384,4 +387,29 @@
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/layout_scanbar_code"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/layout_disable_list" />
+
+        <ImageView
+            android:id="@+id/image_close_layout_scan"
+            android:layout_margin="@dimen/dp20"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_delete_noti"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_marginTop="60dp"
+            android:layout_width="300dp"
+            android:layout_centerInParent="true"
+            android:layout_height="500dp"
+            android:visibility="visible" />
+    </RelativeLayout>
+
+</RelativeLayout>
