--- a/app/src/main/res/layout/layout_fragment_doanh_thu_theo_khach_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_doanh_thu_theo_khach_hang.xml
@@ -70,6 +70,7 @@
 
             <ImageView
                 android:id="@+id/image_filter"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_search" />
@@ -84,6 +85,13 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:hint="Số điện thoại" />
+
+            <ImageView
+                android:id="@+id/image_close"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete_noti" />
         </LinearLayout>
 
     </LinearLayout>
