--- a/app/src/main/res/layout/layout_fragment_doanh_thu_theo_san_pham.xml
+++ b/app/src/main/res/layout/layout_fragment_doanh_thu_theo_san_pham.xml
@@ -84,6 +84,12 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:hint="Tên sản phẩm" />
+            <ImageView
+                android:id="@+id/image_close"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete_noti" />
         </LinearLayout>
 
     </LinearLayout>
