--- a/app/src/main/res/layout/custom_item_choose_level_customer.xml
+++ b/app/src/main/res/layout/custom_item_choose_level_customer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="45dp"
     android:layout_margin="@dimen/dp5"
     android:id="@+id/layout_item"
     android:background="@drawable/custom_background_editext_update"
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/name_level_customer"
+        android:textSize="@dimen/dp15"
         android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
