--- a/app/src/main/res/layout/custom_item_product_in_product_list.xml
+++ b/app/src/main/res/layout/custom_item_product_in_product_list.xml
@@ -13,43 +13,50 @@
 
     <ImageView
         android:id="@+id/image_product"
+        android:scaleType="centerInside"
         android:layout_width="match_parent"
-        android:layout_height="120dp"/>
-
-    <TextView
-        android:id="@+id/name_product"
-        android:layout_marginHorizontal="@dimen/dp5"
-        android:maxLines="1"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/colorAAA"
-        android:textSize="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="130dp"/>
 
     <LinearLayout
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="@dimen/dp5"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        android:layout_marginVertical="@dimen/dp5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <TextView
-            android:layout_weight="2"
-            android:textStyle="bold"
-            android:text="Mã SP: "
-            android:textColor="@color/dangnhap"
-            android:textSize="14dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/id_product"
-            android:layout_weight="1"
+            android:id="@+id/name_product"
+            android:layout_marginHorizontal="@dimen/dp5"
             android:maxLines="1"
+            android:layout_gravity="center"
             android:textStyle="bold"
-            android:textColor="@color/text"
-            android:textSize="14dp"
+            android:textColor="@color/colorAAA"
+            android:textSize="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="@dimen/dp5"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_weight="2"
+                android:textStyle="bold"
+                android:text="Mã SP: "
+                android:textColor="@color/dangnhap"
+                android:textSize="14dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/id_product"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:textStyle="bold"
+                android:textColor="@color/text"
+                android:textSize="14dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
     
 </LinearLayout>
