--- a/app/src/main/res/layout/custom_popup_choose_level_customer.xml
+++ b/app/src/main/res/layout/custom_popup_choose_level_customer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="600dp"
     android:layout_marginVertical="@dimen/dp10"
     android:orientation="vertical">
 
@@ -9,17 +9,21 @@
         android:id="@+id/recycler_view_list"
         android:layout_marginVertical="@dimen/dp10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="500dp"/>
 
     <LinearLayout
-        android:layout_marginBottom="@dimen/dp10"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dp20"
+        android:paddingBottom="30dp"
         android:orientation="horizontal"
-        android:layout_gravity="right"
+        android:layout_gravity="center"
         android:gravity="right"
         android:layout_width="250dp"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/cancel"
+            android:layout_gravity="center"
             android:textStyle="bold"
             android:textColor="@color/colorAAA"
             android:text="Cancel"
@@ -29,6 +33,7 @@
 
         <TextView
             android:id="@+id/choose_item"
+            android:layout_gravity="center"
             android:textStyle="bold"
             android:textColor="@color/colorAAA"
             android:text="Ok"
@@ -37,4 +42,4 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
