--- a/app/src/main/res/layout/layout_fragment_an_toan_kho.xml
+++ b/app/src/main/res/layout/layout_fragment_an_toan_kho.xml
@@ -28,9 +28,9 @@
 
                 <ImageView
                     android:id="@+id/imageNavLeft"
+                    android:padding="@dimen/dp10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/dp5"
                     android:src="@drawable/ic_icon_back" />
 
                 <TextView
