--- a/app/src/main/res/layout/layout_fragment_chi_tiet_don_tra_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_chi_tiet_don_tra_hang.xml
@@ -40,7 +40,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="@dimen/dp5"
+                            android:padding="@dimen/dp10"
                             android:src="@drawable/ic_icon_back" />
 
                         <TextView
