--- a/app/src/main/res/layout/layout_fragment_create_level_customer.xml
+++ b/app/src/main/res/layout/layout_fragment_create_level_customer.xml
@@ -35,7 +35,7 @@
 
                         <ImageView
                             android:id="@+id/imageNavLeft"
-                            android:layout_margin="@dimen/dp10"
+                            android:padding="@dimen/dp10"
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -109,7 +109,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="2. Mã cấp độ "
+                    android:text="2. Mã cấp độ(*) "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -141,7 +141,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="3. Tên "
+                    android:text="3. Tên(*) "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -172,7 +172,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="4. Discount(%) "
+                    android:text="4. Discount(%)(*) "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
