--- a/app/src/main/res/layout/layout_fragment_create_product.xml
+++ b/app/src/main/res/layout/layout_fragment_create_product.xml
@@ -28,7 +28,7 @@
 
                 <ImageView
                     android:id="@+id/imageNavLeft"
-                    android:layout_margin="@dimen/dp5"
+                    android:padding="@dimen/dp10"
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -110,7 +110,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="2. Danh mục "
+                    android:text="2. Danh mục(*) "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -158,7 +158,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="3. Tên sản phẩm "
+                    android:text="3. Tên sản phẩm(*) "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -190,7 +190,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="4. Mã sản phẩm "
+                    android:text="4. Mã sản phẩm(*) "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -252,7 +252,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="6. Tồn kho an toàn "
+                    android:text="6. Tồn kho an toàn(*) "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -280,12 +280,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp">
                 <TextView
+                    android:layout_marginHorizontal="@dimen/dp20"
+                    android:textColor="@color/colorAAA"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:text="7. Giá bán(*)(VNĐ) "
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/giaBan"
+                android:inputType="number"
+                android:textSize="14dp"
+                android:layout_marginVertical="@dimen/dp10"
+                android:layout_marginHorizontal="@dimen/dp20"
+                android:background="@color/hinhnen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+            <View
+                android:layout_marginBottom="@dimen/dp10"
+                android:background="@color/colorAAA"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+
+            <LinearLayout
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="48dp">
+                <TextView
                     android:layout_weight="1"
                     android:layout_marginHorizontal="@dimen/dp20"
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="7. Barcode "
+                    android:text="8. Barcode "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <ImageView
@@ -330,7 +362,7 @@
                     android:textColor="@color/colorAAA"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text="7. QR code "
+                    android:text="9. QR code "
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <ImageView
