--- a/app/src/main/res/layout/layout_fragment_create_supplier.xml
+++ b/app/src/main/res/layout/layout_fragment_create_supplier.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/dp5"
+                    android:padding="@dimen/dp10"
                     android:src="@drawable/ic_icon_back" />
 
                 <TextView
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="1. Mã nhà cung ứng: "
+                    android:text="1. Mã nhà cung ứng(*): "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -106,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="2. Tên nhà cung ứng: "
+                    android:text="2. Tên nhà cung ứng(*): "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -204,7 +204,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="5. Địa chỉ: "
+                    android:text="5. Địa chỉ(*): "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
