--- a/app/src/main/res/layout/layout_fragment_customer_manager.xml
+++ b/app/src/main/res/layout/layout_fragment_customer_manager.xml
@@ -30,6 +30,7 @@
                 <ImageView
                     android:id="@+id/imageNavLeft"
                     android:layout_gravity="center"
+                    android:padding="@dimen/dp10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_icon_back" />
