--- a/app/src/main/res/layout/layout_fragment_employee_detail.xml
+++ b/app/src/main/res/layout/layout_fragment_employee_detail.xml
@@ -28,7 +28,7 @@
 
                 <ImageView
                     android:id="@+id/imageNavLeft"
-                    android:layout_margin="@dimen/dp5"
+                    android:padding="@dimen/dp10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
