--- a/app/src/main/res/layout/layout_fragment_employee_list.xml
+++ b/app/src/main/res/layout/layout_fragment_employee_list.xml
@@ -29,6 +29,7 @@
                 <ImageView
                     android:layout_gravity="center"
                     android:id="@+id/imageNavLeft"
+                    android:padding="@dimen/dp10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_icon_back" />
