--- a/app/src/main/res/layout/layout_fragment_history_sale_employee.xml
+++ b/app/src/main/res/layout/layout_fragment_history_sale_employee.xml
@@ -29,7 +29,7 @@
                 <ImageView
                     android:layout_gravity="center"
                     android:id="@+id/imageNavLeft"
-                    android:layout_margin="@dimen/dp5"
+                    android:padding="@dimen/dp10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_icon_back" />
