--- a/app/src/main/res/layout/layout_fragment_level_customer.xml
+++ b/app/src/main/res/layout/layout_fragment_level_customer.xml
@@ -32,7 +32,7 @@
 
                     <ImageView
                         android:id="@+id/imageNavLeft"
-                        android:layout_margin="@dimen/dp10"
+                        android:padding="@dimen/dp10"
                         android:layout_gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
