--- a/app/src/main/res/layout/layout_fragment_product_detail.xml
+++ b/app/src/main/res/layout/layout_fragment_product_detail.xml
@@ -30,6 +30,7 @@
 
                 <ImageView
                     android:id="@+id/imageNavLeft"
+                    android:padding="@dimen/dp10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -131,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="2. Danh mục "
+                    android:text="2. Danh mục(*) "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -182,7 +183,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="3. Tên sản phẩm "
+                    android:text="3. Tên sản phẩm(*) "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -215,7 +216,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="4. Mã sản phẩm "
+                    android:text="4. Mã sản phẩm(*) "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -279,7 +280,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="6. Tồn kho an toàn "
+                    android:text="6. Tồn kho an toàn(*) "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -301,6 +302,39 @@
                 android:background="@color/colorAAA" />
 
             <LinearLayout
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="48dp">
+                <TextView
+                    android:layout_marginHorizontal="@dimen/dp20"
+                    android:textColor="@color/colorAAA"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:text="7. Giá bán(*)(VNĐ) "
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/gia_ban"
+                android:inputType="number"
+                android:textSize="14dp"
+                android:layout_marginVertical="@dimen/dp10"
+                android:layout_marginHorizontal="@dimen/dp20"
+                android:background="@color/hinhnen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+            <View
+                android:layout_marginBottom="@dimen/dp10"
+                android:background="@color/colorAAA"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
@@ -312,7 +346,7 @@
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
                     android:layout_weight="1"
-                    android:text="7. Barcode "
+                    android:text="8. Barcode "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
 
@@ -359,7 +393,7 @@
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
                     android:layout_weight="1"
-                    android:text="7. QR code "
+                    android:text="9. QR code "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
 
@@ -440,7 +474,8 @@
         android:id="@+id/layout_scanbar_code"
         android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:visibility="visible">
 
         <include layout="@layout/layout_disable_list" />
 
