--- a/app/src/main/res/layout/layout_fragment_quan_ly_lo_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_quan_ly_lo_hang.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/dp10"
+                    android:padding="@dimen/dp10"
                     android:src="@drawable/ic_icon_back" />
 
                 <TextView
