--- a/app/src/main/res/layout/layout_fragment_sales_summary_manager.xml
+++ b/app/src/main/res/layout/layout_fragment_sales_summary_manager.xml
@@ -28,6 +28,7 @@
 
                 <ImageView
                     android:layout_gravity="center"
+                    android:padding="@dimen/dp10"
                     android:id="@+id/imageNavLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
