--- a/app/src/main/res/layout/layout_fragment_supplier_detail.xml
+++ b/app/src/main/res/layout/layout_fragment_supplier_detail.xml
@@ -28,10 +28,10 @@
 
                 <ImageView
                     android:id="@+id/imageNavLeft"
+                    android:padding="@dimen/dp10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/dp5"
                     android:src="@drawable/ic_icon_back" />
 
                 <TextView
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="1. Mã nhà cung ứng: "
+                    android:text="1. Mã nhà cung ứng(*): "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="2. Tên nhà cung ứng: "
+                    android:text="2. Tên nhà cung ứng(*): "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -203,7 +203,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp20"
-                    android:text="5. Địa chỉ: "
+                    android:text="5. Địa chỉ(*): "
                     android:textColor="@color/colorAAA"
                     android:textStyle="bold" />
             </LinearLayout>
