--- a/app/src/main/res/layout/layout_fragment_tong_doanh_thu_manager.xml
+++ b/app/src/main/res/layout/layout_fragment_tong_doanh_thu_manager.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/imageNavLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/dp5"
+                    android:padding="@dimen/dp10"
                     android:src="@drawable/ic_icon_back" />
 
                 <TextView
