--- a/app/src/main/res/layout/layout_fragment_tra_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_tra_hang.xml
@@ -39,7 +39,7 @@
 
                         <ImageView
                             android:id="@+id/imageNavLeft"
-                            android:layout_margin="@dimen/dp5"
+                            android:padding="@dimen/dp10"
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
