--- a/app/src/main/res/layout/layout_fragment_chi_tiet_lo_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_chi_tiet_lo_hang.xml
@@ -338,7 +338,7 @@
                 </LinearLayout>
 
                 <EditText
-                    android:id="@+id/gia_nhap"
+                    android:id="@+id/edtGiaNhap"
                     android:textSize="14dp"
                     android:layout_marginTop="@dimen/dp10"
                     android:textColor="@color/black"
