--- a/app/src/main/res/layout/custom_header_nav.xml
+++ b/app/src/main/res/layout/custom_header_nav.xml
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:layout_marginLeft="@dimen/dp20"
+                android:layout_marginLeft="26dp"
                 android:layout_weight="1"
                 android:text="Thông tin tài khoản"
                 android:textSize="16dp"
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:layout_marginLeft="@dimen/dp20"
+                android:layout_marginLeft="18dp"
                 android:layout_weight="1"
                 android:text="Thay đổi mật khẩu"
                 android:textSize="16dp"
@@ -136,7 +136,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:layout_marginLeft="@dimen/dp20"
+                android:layout_marginLeft="18dp"
                 android:layout_weight="1"
                 android:text="Đăng xuất"
                 android:textSize="16dp"
