add disable product

--- a/app/src/main/res/drawable/ic_filter.xml
+++ b/app/src/main/res/drawable/ic_filter.xml
@@ -1,9 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="33dp"
-    android:height="30dp"
-    android:viewportWidth="33"
-    android:viewportHeight="30">
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
   <path
-      android:pathData="M2.2632,0.2628C1.7892,0.2576 1.3491,0.505 1.1069,0.9164C0.87,1.3279 0.87,1.8305 1.1069,2.2419C1.3491,2.6534 1.7892,2.9008 2.2632,2.8956H3.3179L12.7892,14.7367H20.6851L30.1564,2.8956H31.2111C31.6825,2.9008 32.1252,2.6534 32.3673,2.2419C32.6043,1.8305 32.6043,1.3279 32.3673,0.9164C32.1252,0.505 31.6825,0.2576 31.2111,0.2628H2.2632ZM12.7892,17.3669V29.2107L20.6851,26.5779V17.3669H12.7892Z"
+      android:strokeWidth="1"
+      android:pathData="M8,0.5L32,0.5A7.5,7.5 0,0 1,39.5 8L39.5,32A7.5,7.5 0,0 1,32 39.5L8,39.5A7.5,7.5 0,0 1,0.5 32L0.5,8A7.5,7.5 0,0 1,8 0.5z"
+      android:fillColor="#ffffff"
+      android:strokeColor="#726A95"/>
+  <path
+      android:pathData="M5.2632,5.2628C4.7892,5.2576 4.3491,5.505 4.1069,5.9164C3.87,6.3279 3.87,6.8305 4.1069,7.2419C4.3491,7.6534 4.7892,7.9008 5.2632,7.8956H6.3179L15.7892,19.7367H23.6851L33.1564,7.8956H34.2111C34.6825,7.9008 35.1252,7.6534 35.3673,7.2419C35.6043,6.8305 35.6043,6.3279 35.3673,5.9164C35.1252,5.505 34.6825,5.2576 34.2111,5.2628H5.2632ZM15.7892,22.3669V34.2107L23.6851,31.5779V22.3669H15.7892Z"
       android:fillColor="#726A95"/>
 </vector>
