--- a/app/src/main/res/layout/layout_fragment_chi_tiet_lo_hang.xml
+++ b/app/src/main/res/layout/layout_fragment_chi_tiet_lo_hang.xml
@@ -339,6 +339,8 @@
 
                 <EditText
                     android:id="@+id/edtGiaNhap"
+                    android:inputType="numberDecimal"
+                    android:imeOptions="actionNext"
                     android:textSize="14dp"
                     android:layout_marginTop="@dimen/dp10"
                     android:textColor="@color/black"
@@ -372,6 +374,8 @@
 
                 <EditText
                     android:id="@+id/gia_ban"
+                    android:inputType="numberDecimal"
+                    android:imeOptions="actionNext"
                     android:textSize="14dp"
                     android:layout_marginTop="@dimen/dp10"
                     android:textColor="@color/black"
@@ -438,6 +442,8 @@
 
                 <EditText
                     android:id="@+id/soluong_nhapvao"
+                    android:inputType="numberDecimal"
+                    android:imeOptions="actionDone"
                     android:textSize="14dp"
                     android:layout_marginTop="@dimen/dp10"
                     android:textColor="@color/black"
