--- a/app/src/main/res/layout/layout_fragment_product_list_category.xml
+++ b/app/src/main/res/layout/layout_fragment_product_list_category.xml
@@ -35,6 +35,7 @@
                     android:src="@drawable/ic_icon_back" />
 
                 <TextView
+                    android:id="@+id/tvTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
